# Country_Style_Foods_Vision

./: .gitignore  CMakeLists.txt  README.md  WARP.md  build.bat  build.ps1  build.sh  imgui.ini  session.json
config/recipes/: Large_Dough.json  Small_Dough.json
include/: camera_interface.h  config_manager.h  contour_detector.h  fast_color_segmentation.h  main_application.h  recipe_manager.h  rule_engine.h  simd_hsv_convert.h  vision_pipeline.h
src/: main.cpp
src/gui/: main_application.cpp  polygon_teaching_app.cpp  simple_application.cpp
src/vision/: camera_interface.cpp  config_manager.cpp  contour_detector.cpp  fast_color_segmentation.cpp  recipe_manager.cpp  rule_engine.cpp  simd_hsv_convert.cpp  vision_pipeline.cpp
